--- a/src/components/navbar/navbar.component.css
+++ b/src/components/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 /* Estilos para dispositivos de pantalla grande */
 .navbar {
-  background-color: #9ec4bb; /* color navbar */
+  background-color: #384b89; /* color navbar */
   color: aliceblue;
   padding: 10px 0;
   border-radius: 5%;
