--- a/src/components/searchbar/searchbar.component.css
+++ b/src/components/searchbar/searchbar.component.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
-    background-color: #9ec4bb;;
+    background-color: #2c417b;;
   }
   
   .search-input {
