--- a/src/components/card-detail/card-detail.component.html
+++ b/src/components/card-detail/card-detail.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="Paises" *ngIf="paises.length > 0">
     <ul>
-      <li *ngFor="let pais of paises; let i = index" class="CountryItem" [ngClass]="{'CountryColumn': i % 4 === 0}">
+      <li *ngFor="let pais of getPaginatedPaises(); let i = index" class="CountryItem" [ngClass]="{'CountryColumn': i % 4 === 0}">
         <div>
           <img [src]="pais.flags.png" alt="{{ pais.name.common }} Flag" class="Flag" />
           <div class="CountryDetails">
@@ -30,4 +30,43 @@
   <div *ngIf="paises.length === 0">
     <p>No se encontraron nombres de países.</p>
   </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
+    <!-- Agrega la paginación aquí -->
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" (click)="onPageChange(1)">First</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" (click)="onPageChange(currentPage - 1)" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item" *ngFor="let page of totalPages(); let i = index">
+          <a class="page-link"
+             (click)="onPageChange(page)"
+             [attr.aria-label]="'Page ' + page"
+             [ngClass]="{'active': currentPage === page}">
+            {{ page }}
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" (click)="onPageChange(currentPage + 1)" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" (click)="onPageChange(totalPages().length)">Last</a>
+        </li>
+      </ul>
+      
+    </nav>
+
+    
+    
+  </div>
+
 </div>
