--- a/src/components/favorites/favorites.component.css
+++ b/src/components/favorites/favorites.component.css
@@ -1,9 +1,11 @@
 /* favorites.component.css */
 
+
 .containerfavs {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
+  background-color: #f0f0f0; 
 }
 
 h2 {
@@ -17,8 +19,8 @@ ul {
 }
 
 li {
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
+  background-color: #d18a50;
+  border: 1px solid #6076a8;
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 20px;
