--- a/src/components/favorites/favorites.component.html
+++ b/src/components/favorites/favorites.component.html
@@ -1,6 +1,9 @@
-<div class="containerfavs">
+<body>
+
+  <div class="containerfavs">
     <h2>Mis Países Favoritos</h2>
     <ul>
+     
       <li *ngFor="let pais of favoritos">
         <div>
           <img [src]="pais.flags.png" alt="{{ pais.name.common }} Flag" class="Flag" />
@@ -16,3 +19,4 @@
     </ul>
   </div>
   
+</body>
