--- a/src/components/card-detail/card-detail.component.html
+++ b/src/components/card-detail/card-detail.component.html
@@ -10,6 +10,8 @@
             <h3>Capital: {{ pais.capital }}</h3>
             <h4>Area: {{ pais.area }}</h4>
             <h5>Region: {{ pais.region }}</h5>
+           
+            
             
             <!-- Agrega un botón de corazón con un icono -->
             <button class="heart-button" (click)="toggleFavorite(pais)">
@@ -33,40 +35,10 @@
 </div>
 
 <div class="row">
-  <div class="col-12">
-    <!-- Agrega la paginación aquí -->
-    <nav aria-label="Page navigation">
-      <ul class="pagination justify-content-center">
-        <li class="page-item">
-          <a class="page-link" (click)="onPageChange(1)">First</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" (click)="onPageChange(currentPage - 1)" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <li class="page-item" *ngFor="let page of totalPages(); let i = index">
-          <a class="page-link"
-             (click)="onPageChange(page)"
-             [attr.aria-label]="'Page ' + page"
-             [ngClass]="{'active': currentPage === page}">
-            {{ page }}
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" (click)="onPageChange(currentPage + 1)" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" (click)="onPageChange(totalPages().length)">Last</a>
-        </li>
-      </ul>
-      
-    </nav>
+  <app-paginado
+  [currentPage]="currentPage"
+  [totalPages]="totalPages()"
+  (pageChange)="onPageChange($event)"
+></app-paginado>
 
-    
-    
-  </div>
 
-</div>
