--- a/src/components/favorites/favorites.component.css
+++ b/src/components/favorites/favorites.component.css
@@ -1,11 +1,17 @@
-/* favorites.component.css */
-
-
+.page-container {
+  background-image: url("https://i.gifer.com/WMfD.gif");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .containerfavs {
   max-width: 800px;
-  margin: 0 auto;
   padding: 20px;
-  background-color: #f0f0f0; 
+  background-color: rgba(187, 168, 99, 0.942);
 }
 
 h2 {
