pag,about,card modif

--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -1,6 +1,19 @@
-<div class="about-content">
-    <!-- Contenido específico de AboutComponent -->
-    <h3>hola soy el aboutasdasd</h3>
+<div class="page-container-about">
+  <div class="about-container">
+    <h2>About Países APP</h2>
+    <p>
+      Países APP is a user-friendly application that allows you to explore information
+      about different countries from around the world. You can easily manage your favorite
+      countries, view their details, and even create custom countries if they are not available
+      in our extensive database.
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat, quas corrupti ratione alias expedita nesciunt non? At perspiciatis necessitatibus illo quidem illum voluptate adipisci nisi. Qui error harum aspernatur vero.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit non suscipit asperiores, consequatur deleniti accusantium exercitationem tenetur placeat harum repudiandae modi aperiam quidem dignissimos mollitia tempore dolor ipsa commodi neque.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quae, reprehenderit optio ullam molestias nihil nisi accusantium dolorem? Explicabo at autem quae quidem exercitationem deserunt minus repellendus molestias sapiente fugit!
+    </p>
 
-    
+    <button class="btn-volver" (click)="goToHome()">Back</button>
   </div>
+  <div class="image-container">
+    <img src="../../assets/esfera-paises-fondo.png" alt="esfera-paises" class="about-image" />
+  </div>
+</div>
