--- a/src/components/card-detail/card-detail.component.html
+++ b/src/components/card-detail/card-detail.component.html
@@ -21,7 +21,7 @@
             
             <!-- Agrega un botón para abrir Google Maps -->
             <button class="map-button" (click)="openGoogleMaps(pais.maps.googleMaps)">
-              Abrir Google Maps
+              Open Google Maps
             </button>
             
           </div>
