--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 
 <nav class="navbar">
   <ul class="nav-list">
-    <li><a routerLink="/" routerLinkActive="active">Inicio</a></li>
-    <li><a routerLink="/about" routerLinkActive="active">about me</a></li>
-    <li><a routerLink="/favorites" routerLinkActive="active">Favoritos</a></li>
-    <li><a routerLink="/create" routerLinkActive="active">Crear País</a></li>
+    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
+    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+    <li><a routerLink="/favorites" routerLinkActive="active">Favorites</a></li>
+    <li><a routerLink="/create" routerLinkActive="active">Create Countries</a></li>
   </ul>
   <app-searchbar></app-searchbar>
   </nav>
