--- a/src/components/about/about.component.css
+++ b/src/components/about/about.component.css
@@ -1,10 +1,64 @@
-.about-content {
-
-background-color: rgb(44, 244, 18);
-
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.page-container-about {
+    background-color: hsl(210, 29%, 8%); 
+    width: 100%;
+    min-height: 100vh;
     display: flex;
-    justify-content: space-between;
-}
+    justify-content: center;
+    align-items: center;
+    position: relative; 
+  }
+  
+  .about-content {
+    color: aliceblue;
+  }
+  
+  .about-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-left: 20px;
+  }
+  
+  h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  
+  .image-container {
+    position: absolute;
+    top: 20px; 
+    right: 20px; 
+  }
+  
+  .about-image {
+    max-width: 1000px;
+    width: 100%; 
+    height: auto;
+    border-radius: 10px;
+  }
+
+
+  button {
+    background-color: #04172c;
+    color: white; 
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  button:hover {
+    background-color: #0056b3; 
+  }
