--- a/src/components/card-detail/card-detail.component.css
+++ b/src/components/card-detail/card-detail.component.css
@@ -5,11 +5,11 @@
   margin-bottom: 20px;
   width: 100%;
 }
-
 .card {
   background-color: #f3c473;
-  margin-top: 10px;
-  margin-bottom: 10px; /* Añadir margen inferior */
+  margin-top: 5px; /* Reduce el margen superior */
+  margin-bottom: 5px; /* Reduce el margen inferior */
+  padding: 0px; /* Reduce el padding */
   display: flex;
   flex-wrap: wrap;
   justify-content: center; /* Centrar horizontalmente */
@@ -46,6 +46,7 @@
 }
 
 .Paises {
+  justify-content: center;
   text-align: center;
   margin-top: 10px;
   background-color: #88b8a9;
@@ -62,13 +63,13 @@
 
 
 .CountryItem {
- background-color: #7465e6;
+  background-color: #262948;
   display: flex;
-  flex : 1;
+  flex: 1;
   border: 10px solid #060a2e;
   padding: 3px;
-  width: calc(25% - 10px); /* Ancho de cada país (25% - 10px de margen) */
-  margin: 2px 5px; /* Ajusta el margen */
+  width: calc(25% - 15px);/* Ancho de cada país (25% - 10px de margen) */
+  margin: 1px 4px; /* Ajusta el margen */
   display: inline-block;
   flex-direction: column;
   justify-content: space-between;
@@ -81,9 +82,13 @@
   margin-left: 10px;
 }
 
+
+
+
 .Flag {
-  width: 90%;
-  height: 200px;
+  border-radius: 5px;
+  width: 70%;
+  height: 100px; /* Cambia la altura de las banderas */
   margin-top: 10px;
 }
 
@@ -93,6 +98,7 @@
   padding: 3px;
   text-align: center;
   transition:  0.5s ease-in-out, padding 0.5s ease-in-out;
+  font-size: 12px;
 }
 
 .CountryDetails:hover {
@@ -100,16 +106,18 @@
   padding: 10px;
 }
 
-/* Agrega estos estilos a tu archivo de estilos CSS */
+
+
+/* Estilos para el botón de corazón */
 .heart-button {
   border: none;
   background-color: transparent;
   padding: 0;
   cursor: pointer;
-  font-size: 1.5em; /* Usamos 'em' para que el tamaño sea relativo */
-  transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* Agregamos border-color a la transición */
-  margin-right: 5%; /* Espacio entre el corazón y la información */
-  margin-left: -50%; 
+  font-size: 1.5em;
+  transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  margin-right: 5%;
+  margin-left: -50%;
 }
 
 .heart-button:hover {
@@ -117,17 +125,14 @@
 }
 
 .fa-heart {
-  transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease; 
-  border: 3px solid transparent; 
+  transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  border: 3px solid transparent;
 }
-
 
 
 .favorited-heart {
-
-  border-color: #f90909; /* Color del borde cuando está marcado como favorito */
+  border-color: #f90909;
 }
-
 
 
 .map-button {
@@ -135,14 +140,29 @@
   padding: 10px 20px;
   font-size: 14px;
   color: #fff;
-  background-color: #1a237e; /* Color azul oscuro */
+  background-color: #1a237e;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-right: -400px;
+  margin-right: -100px;
 }
 
 .map-button:hover {
-  background-color: #0d47a1; /* Color azul oscuro más claro al pasar el cursor */
+  background-color: #0d47a1;
+}
+
+/*  botones responsivos */
+@media (max-width: 768px) {
+  .heart-button, .map-button {
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom: 10px; 
+    display: block; 
+    text-align: center; 
+  }
+
+  .heart-button {
+    font-size: 1.7em; 
+  }
 }
