--- a/src/components/favorites/favorites.component.css
+++ b/src/components/favorites/favorites.component.css
@@ -1,43 +1,55 @@
+.title {
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  color: rgb(181, 209, 235);
+
+}
 .page-container {
   background-image: url("https://i.gifer.com/WMfD.gif");
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
+
 .containerfavs {
-  max-width: 800px;
+  max-width: 1100px;
   padding: 20px;
-  background-color: rgba(187, 168, 99, 0.942);
+  background-color: rgba(96, 85, 45, 0.942);
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
-h2 {
-  font-size: 24px;
-  margin-bottom: 20px;
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-li {
+.country-item {
+  flex: 1;
   background-color: #d18a50;
   border: 1px solid #6076a8;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
+  border-radius: 10px; /* Aumenta el radio del borde */
+  padding: 20px; /* Aumenta el espaciado interno */
+  min-width: 300px; /* Ajusta el ancho mínimo de la card */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Agrega una sombra */
 }
 
 .Flag {
-  width: 50px;
+  width: 170px; /* Ajusta el tamaño de las banderas */
   height: auto;
-  margin-right: 10px;
+  margin-right: 15px;
+}
+
+.card-content {
+  display: flex;
+  align-items: center;
 }
 
 .CountryDetails {
@@ -45,12 +57,12 @@ li {
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 22px; /* Reduce el tamaño del título */
   margin: 0;
 }
 
 h3 {
-  font-size: 16px;
+  font-size: 18px; /* Reduce el tamaño del texto */
   margin: 5px 0;
 }
 
@@ -58,7 +70,12 @@ h3 {
   background-color: #ff6347;
   color: white;
   border: none;
-  padding: 5px 10px;
-  border-radius: 3px;
+  padding: 8px 15px; /* Aumenta el padding del botón */
+  border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.remove-button:hover {
+  background-color: #e74c3c;
 }
