--- a/src/components/searchbar/searchbar.component.css
+++ b/src/components/searchbar/searchbar.component.css
@@ -1,7 +1,3 @@
-.search-result-item h1 {
-  font-family: 'Inconsolata', monospace;
-
-}
 
 
 .search-bar {
@@ -9,7 +5,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
-    background-color: #2c417b;;
+    background-color: #384b89;;
   }
   
   .search-input {
