--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-
 <nav class="navbar">
+  <button class="btn-volver" (click)="goToHome()">
+    ←	Back
+  </button>
   <ul class="nav-list">
     <li><a routerLink="/" routerLinkActive="active">Home</a></li>
     <li><a routerLink="/about" routerLinkActive="active">About</a></li>
