--- a/src/components/welcome/welcome.component.css
+++ b/src/components/welcome/welcome.component.css
@@ -1,4 +1,48 @@
-.welcome-content {
-background-color: brown;
-color: azure;
-}
+/* En el archivo welcome.component.css */
+
+.landingPage {
+    background-color: #0f0e0e;
+    background-size: cover; /* Ajustar la imagen para cubrir toda la pantalla */
+    background-position: center; /* Centrar la imagen */
+    height: 100vh;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .landing__box {
+    padding: 1.5rem;
+    border-radius: 1rem;
+    background-color: rgba(182, 229, 112, 0.4);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    backdrop-filter: blur(2px);
+  }
+  
+  .landing__title {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .landing__button {
+    color: aliceblue;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-weight: bolder;
+    background-color: #0f0e0e;
+    border: none;
+    border-radius: .8rem;
+    margin-top: 2rem;
+    padding: .8rem;
+    width: 400px;
+    transition: .4s;
+  }
+  
+  .landing__button:hover {
+    cursor: pointer;
+    background-color: #5ba62d;
+    transition: .4s;
+  }
+  
