--- a/src/components/searchbar/searchbar.component.html
+++ b/src/components/searchbar/searchbar.component.html
@@ -1,6 +1,6 @@
 <div class="search-bar">
-  <input class="search-input" type="text" placeholder="Search pais..." [(ngModel)]="searchText1">
-  <button class="search-button" (click)="onSearch()" [disabled]="!searchText1">Search</button>
+  <input class="search-input" type="text" placeholder="Search country..." [(ngModel)]="searchText1">
+  <button class="search-button" (click)="onSearch()" [disabled]="!searchText1">🔎</button>
 </div>
 
 <div class="search-results" *ngIf="searchResults.length > 0">
@@ -10,11 +10,11 @@
         <div class="button-container">
           <button class="close-button" (click)="removeSearchResult(result)">X</button>
         </div>
+        <img [src]="result.flags.png" alt="{{ result.name.common }} Flag" class="Flag" />
         <button class="heart-button" (click)="toggleFavorite(result)">
           <i class="fa fa-heart" [ngClass]="{'favorited': result.favorite}"></i>
           ❤️
         </button>
-        <img [src]="result.flags.png" alt="{{ result.name.common }} Flag" class="Flag" />
         <h1>Name: {{ result.name.common }}</h1>
         <h1>Capital: {{ result.capital }}</h1>
         <h1>Population: {{ result.population }}</h1>
