--- a/src/components/searchbar/searchbar.component.css
+++ b/src/components/searchbar/searchbar.component.css
@@ -1,36 +1,54 @@
 
 
 .search-bar {
+  
   justify-content: center;
     display: flex;
     align-items: center;
-    padding: 10px;
-    background-color: #384b89;;
+    padding: 3px;
+    background-color: #384b89;
+    width: 100%;
+   
   }
   
   .search-input {
 
-    padding: 10px 80px;
+    padding: 5px 80px 5px 30px;
     border: 1px solid #cd0e0e;
     border-radius: 20px;
   }
   
-  .search-button:hover {
-    margin-left: 10px;
-    padding: 6px 10px;
-    background-color: #3300ff;
+  .search-button {
+    padding: 8px 16px;
+    background-color: #6a7bb5;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
+    transition: background-color 0.3s, margin-left 0.3s; /* Agrega una transición suave */
   }
+  
+  .search-button:hover {
+    margin-left: 10px;
+    background-color: #3a53a6;
+  }
+  .search-results{
+    
+    border-radius: 10px;
+    background-color: #3a53a6;
+    color: white;
+    width: 100%;
 
+  }
+  h1{
+    font-size: 23px;
+  }
   .close-button {
     justify-self: auto;
     padding: 10px;
     border-radius: 4px;
-    background-color: #cd0e0e;
-    color: white;
+
+    color: rgb(254, 255, 255);
     border: none;
     cursor: pointer;
     font-size: 14px;
@@ -39,9 +57,10 @@
   }
   
   .close-button:hover {
-    background-color: #ff3a3a;
+    background-color: #f30606
   }
 
+  
   
   .heart-button {
     border: none;
@@ -50,7 +69,7 @@
     cursor: pointer;
     font-size: 2em; /* Usamos 'em' para que el tamaño sea relativo */
     transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* Agregamos border-color a la transición */
-    
+   
   }
   
   .heart-button:hover {
@@ -70,3 +89,72 @@
     border-color: #f90909; /* Color del borde cuando está marcado como favorito */
   }
  
+  .search-results ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: -15px;
+  }
+  
+  .search-results li {
+    flex: 1;
+    margin: 15px;
+    min-width: 200px;
+  }
+  
+  .search-result-item {
+    flex: 1;
+    background-color: #4869d7;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(218, 21, 21, 0.1);
+    padding: 20px; /* Aumenta el espacio con el color de fondo */
+    text-align: center;
+    transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  }
+  
+  .search-result-item img {
+    width: 80px;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  
+  .search-result-item h1 {
+    font-size: 16px;
+    margin: 5px 0;
+  }
+  
+  .search-result-item .button-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10px;
+  }
+  
+  .search-result-item .close-button,
+  .search-result-item .heart-button {
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    font-size: 1.5em;
+    transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+    margin: 0 10px;
+  }
+  
+  .search-result-item .close-button:hover,
+  .search-result-item .heart-button:hover {
+    transform: scale(1.1);
+  }
+  
+  .search-result-item .fa-heart {
+    transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+    border: 2px solid transparent;
+    margin-left: 0;
+  }
+  
+  .search-result-item .favorited-heart {
+    border-color: #384b89;
+  }
+  
