--- a/src/components/welcome/welcome.component.html
+++ b/src/components/welcome/welcome.component.html
@@ -1,8 +1,7 @@
 <div class="landingPage">
   <div class="landing__box">
-    <h1 class="landing__title welcome"><b>Bienvenido</b></h1>
-    <h2 class="landing__title">Este es mi Proyecto</h2>
-    <h3 class="landing__title">Mi nombre es Mauro Gatica</h3>
-    <button class="landing__button" (click)="goToHome()">Toca aquí</button>
+    <h1 class="landing__title welcome"><b>Welcome</b></h1>
+  
+    <button class="landing__button" (click)="goToHome()">Click Here</button>
   </div>
 </div>
