--- a/src/components/favorites/favorites.component.html
+++ b/src/components/favorites/favorites.component.html
@@ -1,18 +1,24 @@
-<div class="page-container">
-  <div class="containerfavs">
-    <h2 class="title">My favorite countries</h2>
-    <div class="cards-container">
-      <div class="country-item" *ngFor="let pais of favoritos">
-        <div class="card-content">
-          <img [src]="pais.flags.png" alt="{{ pais.name.common }} Flag" class="Flag" />
-          <div class="CountryDetails">
-            <h1>{{ pais.name.common }}</h1>
-            <h3>Capital: {{ pais.capital }}</h3>
-            <h3>Population: {{ pais.population }}</h3>
-            <button class="remove-button" (click)="removeFromFavorites(pais)">Delete favorite</button>
+<div class="contenedor1">
+  
+  <button class="btn-volver" (click)="goToHome()">Back</button>
+  <div class="page-container">
+    <div class="containerfavs">
+      <h2 class="title">My favorite countries</h2>
+      <div class="cards-container">
+        <div class="country-item" *ngFor="let pais of favoritos">
+          <div class="card-content">
+            <img [src]="pais.flags.png" alt="{{ pais.name.common }} Flag" class="Flag" />
+            <div class="CountryDetails">
+              <h1>{{ pais.name.common }}</h1>
+              <h3>Capital: {{ pais.capital }}</h3>
+              <h3>Population: {{ pais.population }}</h3>
+              <button class="remove-button" (click)="removeFromFavorites(pais)">Delete favorite</button>
+              
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  
 </div>
