--- a/src/components/searchbar/searchbar.component.css
+++ b/src/components/searchbar/searchbar.component.css
@@ -25,7 +25,7 @@
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    transition: background-color 0.3s, margin-left 0.3s; /* Agrega una transición suave */
+    transition: background-color 0.3s, margin-left 0.3s; 
   }
   
   .search-button:hover {
@@ -43,12 +43,13 @@
   h1{
     font-size: 23px;
   }
-  .close-button {
+  .close-button:hover {
+    
     justify-self: auto;
     padding: 10px;
     border-radius: 4px;
 
-    color: rgb(254, 255, 255);
+    color: rgb(255, 2, 2);
     border: none;
     cursor: pointer;
     font-size: 14px;
@@ -56,38 +57,33 @@
     margin-left: -18px;
   }
   
-  .close-button:hover {
-    background-color: #f30606
-  }
+  
+  
+ 
+.heart-button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  font-size: 1.5em;
+  transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  margin-right: 5%;
+  margin-left: -50%;
+}
+
+.heart-button:hover {
+  transform: scale(1.2);
+}
+
+.fa-heart {
+  transition: transform 0.3s ease, border-color 0.3s ease; 
+  border: 3px solid transparent;
+  border-color: #f90909;
+  color: #f90909; 
+}
+
 
   
-  
-  .heart-button {
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    cursor: pointer;
-    font-size: 2em; /* Usamos 'em' para que el tamaño sea relativo */
-    transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* Agregamos border-color a la transición */
-   
-  }
-  
-  .heart-button:hover {
-    transform: scale(1.2);
-  }
-  
-  .fa-heart {
-    transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease; 
-    border: 3px solid transparent; 
-    margin-left: -18px;
-  }
-  
-  
-  
-  .favorited-heart {
-  
-    border-color: #f90909; /* Color del borde cuando está marcado como favorito */
-  }
  
   .search-results ul {
     display: flex;
@@ -109,7 +105,7 @@
     background-color: #4869d7;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(218, 21, 21, 0.1);
-    padding: 20px; /* Aumenta el espacio con el color de fondo */
+    padding: 20px; 
     text-align: center;
     transition: transform 0.3s ease, color 0.3s ease, border-color 0.3s ease;
   }
